--- a/Styles/style.css
+++ b/Styles/style.css
@@ -55,6 +55,12 @@ body{
     
 }
 
+.taskInfo{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 
 
 .taskInput{
@@ -118,27 +124,3 @@ body{
 }
 
 
-/* Star Checkboc*/
-
-.starCheckBox{
-    display: none;
-}
-
-.starLabel{
-    font-size: 35px;
-    color: rgb(216, 216, 216);
-    cursor: pointer;
-    user-select: none;
-    transition: color 0.1s;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-    top: -3px;
-}
-
-.starCheckBox:checked + .starLabel{
-
-    color: gold;
-    
-}
