--- a/Styles/style.css
+++ b/Styles/style.css
@@ -19,28 +19,35 @@
 body{
     margin: 0px;
     background: rgb(34, 34, 34);
+    --space: 15px;
+    --sideBarWidth: 0px
+    
 }
+
+body.showSideBar{
+    --sideBarWidth: 240px
+}
+
 
 .app{
     --inputHeight: 70px;
-    --space: 15px;
+    
     margin: var(--space);
     background-color: rgb(39, 39, 39);
     height: calc(100vh - var(--space)*2);
-    display: block;
+    display: flex;
     position: relative;
+    margin-left: calc(var(--sideBarWidth) + var(--space));
+
 }
 
 
 .app-content{
+    
+    width: 100%;
     height: calc(100% - var(--inputHeight));
     overflow-y: auto;
 }
-
-.app-content *{
-    margin: 0px 10px;
-}
-
 /*add task Button(input)*/
 .input{
     position: absolute;
@@ -65,6 +72,11 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    padding-left: 10px;
+}
+
+.taskInfo p{
+    padding-left: 10px;
 }
 
 
@@ -91,6 +103,7 @@ body{
 
 .Tasks{
     position: relative;
+    margin: 0px 10px;
 }
 
 .task{
@@ -117,17 +130,34 @@ body{
 }
 
 .heading{
+    display: flex;
     margin-top: 0px;
     margin-bottom: 5px;
     padding-top: 10px;
+    align-items: center;
+    margin: 0px 13px;
+    
+}
+
+.heading input{
     color: rgb(211,211,211);
+    text-align: right;
+    margin: 0px 0px;
+    height: 20px;
+    background-color: transparent;
+    outline: none;
+    border: none;
+    width: 120px;
+    font-size: 20px;
     text-align: center;
 }
+
 
 .checkBoxes{
     display: flex;
     justify-items: center;
     align-items: center;
+    padding-inline: 10px;
 }
 
 
@@ -140,7 +170,7 @@ body{
     border: 2px rgb(211,211,211) solid;
     border-radius: 10px;
     height: 170px;
-    width: calc(100% - 35px);
+    width: calc(100% - var(--sideBarWidth) - var(--space)*4);
     bottom: 0px;
     z-index: 102;
     transform: translateY(100%);
@@ -149,6 +179,7 @@ body{
     transform: translateY( 100%); /* Center X, push off bottom */
     opacity: 0;
     transition: transform 0.5s, opacity 0.5s;
+    left: calc(var(--sideBarWidth) + var(--space)*2);
 }
 
 .addTaskPopUpShow {
@@ -198,7 +229,7 @@ body{
 
 
 .taskInputRow3{
-    padding: 0px 60px;
+    padding: 0px 10%;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -212,15 +243,19 @@ body{
 }
 
 .inputDateBtn{
-    padding-inline: 30px;
+    width: 30%;
+    text-align: left;
+    padding-inline: 10px;
+    max-width: 200px;
 }
 
 .repeatInputBtn{
-    padding-inline: 30px;
+    display: none;
+    padding-inline: 3%;
 }
 
 .addTaskConfirm{
-    width: 50%;
+    width: 60%;
     background-color: rgb(58, 153, 76);
     
 }
