--- a/Styles/side_bar.css
+++ b/Styles/side_bar.css
@@ -10,6 +10,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin: 0px 10px 0px 0px;
 }
 
 .burger.showSideBar{
