--- a/Styles/elements.css
+++ b/Styles/elements.css
@@ -49,6 +49,7 @@
 .line{
     display: flex;
     margin: 20px 10px 20px 0px;
+    cursor: pointer;
 }
 
 .line p{
@@ -82,12 +83,15 @@
 
 
 .trashBin{
-    font-size: 42px;
-    color: black;
-    font-weight: 100;
     user-select: none;
-    padding: 0px 10px;
-    transform:  translateY(-2px);
+    align-items: center;
+    justify-items: center;
+    transform:  translateY(1px);
+}
+
+.trashBin img{
+    height: 35px;
+    margin: 0px 0px 0px  5px;
 }
 
 .trashBin.red{
@@ -95,5 +99,12 @@
 }
 
 .trashBinList{
-    font-size: 25px;
+    
+    color: rgba(255, 255, 255, 0);
+    transition: ease-in-out 0.2s;
+}
+
+.trashBinList img{
+    height: 25px;
+    display: none;
 }
